# beclicker

./: Cargo.toml  LICENSE  README.md
src/: app.rs  clicker.rs  hotkey_manager.rs  main.rs  window_manager.rs
src/ui/: mod.rs  settings_panel.rs  top_panel.rs  windows_list.rs
